<resources>
    <string name="app_name">MyWeatherDraver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Setting</string>
    <string name="menu_slideshow">Favourites</string>
    <string name="menu_map">Map</string>
    <string name="home_second">Home Second</string>
    <string name="textView2" translatable="false">City</string>
    <string name="image1" translatable="false">image1</string>
    <string name="image2" translatable="false">image2</string>
    <string name="image3" translatable="false">image3</string>
    <string name="speed" translatable="false">m/s</string>
    <string name="F">\u2109</string>
    <string name="C">\u2103</string>
    <string name="unitsSpeed_m_sec">m/s</string>
    <string name="unitsSpeed_km_h">km/h</string>
    <string name="unitsPress_Hg">mm Hg</string>
    <string name="unitsPress_gPa">gPa</string>
    <string name="unitsHumi">%</string>
    <string name="cityNname">Krasnodar</string>
    <string name="switchtextSpeed">Wind speed</string>
    <string name="switchtextPress">Pressure</string>
    <string name="switchtextHumi">Humidity</string>
    <string name="CRD">Krasnodar</string>
    <string name="MSK">Moskow</string>
    <string name="SPB">Saint Petersburg</string>
    <string name="setBut">Settings</string>
    <string name="setting">setting</string>
    <string name="back">back</string>
    <string name="brov">browser</string>

    <string-array name="arrayCity">
        <item>Krasnodar</item>
        <item>Moskau</item>
        <item>Saint Petersburg</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginName">Login</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="Cancel">cancel</string>
    <string name="switch3">Switch theme</string>
    <string name="textchengPress">show the pressure?</string>
    <string name="textchengPress_2">remove the pressure?</string>
    <string name="textshowHumi">show the humidity?</string>
    <string name="textremiveHumi">remove the humidity?</string>
    <string name="show_button">Show</string>
    <string name="remove_but">Remove</string>
    <string name="rem_speed">remove the speed?</string>
    <string name="show_speed">show the speed?</string>
    <string name="rem_pres">Remove</string>
    <string name= "alert_dialog_1" >Alert Dialog с двумя кнопками</string>
    <string name= "message">изменить шкалу температуры?</string>
    <string name= "button_yes">Да</string>
    <string name= "button_no">Нет</string>
    <string name="tv_tbText">Температура</string>
    <string name="tv_tbTextspeed">Скорость ветра</string>
    <string name="tv_tbTextPress">Давление</string>
    <string name= "alert_dialog_2" >Alert Dialog с фрагментом</string>
    <string name= "message2">изменить шкалу скорости</string>
    <string name="messge3">Переключить шкалу?</string>
    <string name="intError">Internet Error</string>
    <string name="noData">no data</string>
    <string name="remove">Remove</string>
    <string name="request">Request info</string>
    <string name="low_bat_lewel">Low battery level</string>
    <string name="no_connect_wifi">No Wi-Fi connection</string>
    <string name="weather_map">Current location weather</string>
    <string name="et_hint">enter your city</string>
</resources>
