<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.FragmentSettings">

    <ImageView
        android:id="@+id/imageView4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/s12002"
        tools:visibility="visible"
        style="@style/imageStyle1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/cityNname"
                android:textAlignment="center"
                android:textColor="#2F2E2E"
                android:textSize="30dp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spiner"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:textSize="100dp">

        </Spinner>

        <Switch
            android:id="@+id/switchSpeed"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/switchtextSpeed"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switchHumi"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/switchtextHumi"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switchPress"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/switchtextPress"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/switch3"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_tbText"
                android:textSize="25sp"
                android:layout_marginLeft="30dp"/>


            <ToggleButton
                android:id="@+id/tbCelsFareng"
                android:layout_width="162dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:checked="false"
                android:foreground="@drawable/img1"
                android:text="ToggleButton" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>